ft_containers-unit-test/logs.txt
../vector_tests/begin().cpp:21:18: error: expression is not assignable
    v.push_back(*++vector.begin());
                 ^ ~~~~~~~~~~~~~~
../vector_tests/begin().cpp:28:59: note: in instantiation of function template specialization 'begin_test<int>' requested here
    exit(run_vector_unit_test<int>("begin()", begin_test, begin_test));
                                                          ^
1 error generated.
llocator<int> >::iterator' (aka '__wrap_iter<int *>') to 'typename ft::enable_if<!ft::is_integral<__wrap_iter<int *> >::value, int>::argument_type *' (aka 'int *') for 1st argument
        vector(typename ft::enable_if<!ft::is_integral<InputIterator>::value, T >::argument_type *  first, InputIterator last, const allocator_type &alloc = allocator_type()) 
        ^
../vector_tests/../../../vector.hpp:112:11: note: candidate constructor not viable: no known conversion from 'std::__1::vector<int, std::__1::allocator<int> >::iterator' (aka '__wrap_iter<int *>') to 'ft::vector::size_type' (aka 'unsigned long') for 1st argument
        explicit vector(size_type n, const value_type &val = value_type(), const allocator_type &alloc = allocator_type()) : start_iter(0) , end_iter(0)
                 ^
../vector_tests/../../../vector.hpp:85:11: note: candidate constructor not viable: requires at most 1 argument, but 2 were provided
        explicit vector(const Allocator & = Allocator()) : start_iter(0) , end_iter(0)
                 ^
../vector_tests/../../../vector.hpp:93:2: note: candidate constructor not viable: requires single argument 'rhs', but 2 arguments were provided
        vector (vector const &rhs)
        ^
1 error generated.
